# secret-santa

./: .gitignore  README.md  launch-work.json  pyproject.toml  template.csv
secret_santa/: app.py  mail.py
