[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = "A way to automagincally send out a secret santa email blast!"
authors = ["Jeetaditya Chatterjee <jeetelongname@gmail.com>"]
readme ="README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
